--- a/restaurant/templates/index.html
+++ b/restaurant/templates/index.html
@@ -1,6 +1,9 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
+{% block content %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,17 +14,17 @@
     <meta
       name="author"
       content="Based in Chicago, Illinois, Little Lemon is a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
-    />
+    /> -->
 
     <!-- Load favicon -->
-    <link
+    <!-- <link
       rel="shortcut icon"
       type="image/png"
       href="{% static 'img/favicon.ico' %}"
-    />
+    /> -->
 
     <!-- Include your CSS files here -->
-    <link
+    <!-- <link
       rel="preload"
       as="style"
       href="{% static 'css/style.css' %}"
@@ -34,18 +37,18 @@
       href="https://fonts.googleapis.com/css2?family=Karla&family=Markazi+Text:wght@500&display=swap"
       rel="stylesheet"
     />
-  </head>
-<header>
+  </head> -->
+<!-- <header>
   <img src="{% static 'img/logo.png' %}" />
     </header>
     <nav>
       <ul>
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="{% url 'booking-list' %}">Book</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'menu' %}">Menu</a></li>
+        <li><a href="{% url 'book' %}">Book</a></li>
       </ul>
-  </nav>
+  </nav> -->
 <body>
 <section>
     <article id="hero">
@@ -53,7 +56,7 @@
       <p>
         30% Off This Weekend 
       </p>
-      <a href="#" class="cta"> Book now </a>
+      <a href="{% url 'book' %}" class="cta"> Book now </a>
     </article>
   </section>
   <section>
@@ -64,7 +67,7 @@
         Our menu consists of 12-15 seasonal items based on Italian, Greek, and Turkish culture.
       </p>
       <p>
-        <a href="#">See our new menu</a>
+        <a href="{% url 'menu' %}">See our new menu</a>
       </p>
     </article>
     <article>
@@ -74,7 +77,7 @@
         Reserve your table for an Italian, Greek, and Turkish dining experience.
       </p>
       <p>
-        <a href="#">Book your table now</a>
+        <a href="{% url 'book' %}">Book your table now</a>
       </p>
     </article>
     <article>
@@ -90,13 +93,14 @@
       </ul>
     </article>
   </section>
-  <footer>
+  <!-- <footer>
     <article>
       <img src="{% static 'img/logo_footer.png' %}" />
     </article>
     <article>
       <p>Copyright {{ current_year }} Little Lemon</p>
     </article>
-  </footer>
+  </footer> -->
 </body>
 </html>
+{% endblock %}
