--- a/restaurant/templates/partials/_header.html
+++ b/restaurant/templates/partials/_header.html
@@ -8,6 +8,7 @@
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'menu' %}">Menu</a></li>
     <li><a href="{% url 'book' %}">Book</a></li>
-    <li><a href="{% url 'reservations' %}">Reservations</a></li>
+    <!-- <li><a href="{% url 'reservations' %}">Reservations</a></li> -->
+    <li><a href="{% url 'login' %}">Login</a></li>
   </ul>
 </nav>
